Fix layout issues

--- a/pathology-theme/sass/_layout.scss
+++ b/pathology-theme/sass/_layout.scss
@@ -55,6 +55,8 @@ article {
 
     img {
       max-width: 100px;
+      width: 100%;
+      height: auto;
     }
 
     text-align: center;
